# routes/v1/auth.routes.js
@@ -1,0 +1,13 @@
+const router = require("express").Router();
+const {
+  register,
+  login,
+  verified,
+} = require("../../controllers/v1/authController");
+const  {restrict}  = require("../../middlewares/auth.middleware");
+
+router.post("/register", register);
+router.post("/login", login);
+router.get("/authenticated", restrict, verified);
+
+module.exports = router;
